@@ -2,6 +2,7 @@ March 2019
   - Added YubiKey as 2-factor authentication provider
   - LAM Pro:
    -> New self service fields: Mail routing (Local address) and Windows (Proxy-Addresses)
+   -> Bind DLZ: support descriptions in records (requires latest LDAP schema)
   - Fixed bugs:
    -> Allow tree-only configurations without any other tab
 
